# friendly-type-erasure

./: .clang-format  .travis.yml  LICENSE  README.md  make_type_erased_interface.py  pimpl.py  type_erase  type_erase.py
forms/: basic.cpp  basic.hpp  basic_handle.hpp  basic_header_only.hpp  clone_handle.hpp  cow.cpp  cow.hpp  cow_handle.hpp  sbo.hpp  sbo_cow.hpp  sbo_cow_handle.hpp  sbo_cow_header_only.hpp  sbo_handle.hpp  sbo_header_only.hpp  util.hh  vtable_util.hh
forms/inheritance_based/: util.hh
forms/vtable_based/: vtable_util.hh
headers/: handle.hpp  sbo_cow_handle.hpp  vtable_cow.hpp
python_test/: test_parser_addition.py  test_type_deduction.py
tests/: CMakeLists.txt  generate_given_interface  interface_test.form  log  mock_fooable.hh  plain_interface.hh  run  sbo_interface_test.form  sbo_vtable_interface_test.form  test.cpp  util.hh  vtable_interface_test.form
tests/pimpl_tests/: CMakeLists.txt  generate_given_interface  int.hh  interface_test.form  plain_interface.hh  run
tests/pimpl_tests/pimpl_basic_header_only/: heap_allocations.cpp
type_erasure/: clang_util.py  code.py  cpp.py  cpp_file_parser.py  detail_generator.py  execution_wrapper_file_writer.py  file_parser.py  file_writer.py  formatting.command  handle_detail.py  handle_file_writer.py  handle_generator.py  handle_interface_generator.py  header_file_writer.py  inheritance_based_file_writer.py  interface_generator.py  parser_addition.py  pimpl_file_writer.py  table_detail.py  table_interface_generator.py  to_string.py  util.py  vtable_based_file_writer.py
util/: util.hh  vtable_util.hh
(+78 files in other folders)
